
cc_library(
	name = "graph",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = glob([
		"src/**/*.cpp",
		"src/**/*.hpp",
		"src/**/*.c",
		"src/**/*.h",
	]),
	defines = [
		"BOOST_ALL_NO_LIB=1"
	],
	deps = [
		"@com_github_bazelboost_range//:range",
		"@com_github_bazelboost_detail//:detail",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_throw_exception//:throw_exception",
		"@com_github_bazelboost_concept_check//:concept_check",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_property_map//:property_map",
		"@com_github_bazelboost_function//:function",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_iterator//:iterator",
		"@com_github_bazelboost_spirit//:spirit",
		"@com_github_bazelboost_unordered//:unordered",
		"@com_github_bazelboost_test//:test",
		"@com_github_bazelboost_array//:array",
		"@com_github_bazelboost_bind//:bind",
		"@com_github_bazelboost_utility//:utility",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_random//:random",
		"@com_github_bazelboost_tuple//:tuple"
	],
)
