
cc_library(
	name = "graph",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = glob([
		"src/**/*.cpp",
		"src/**/*.hpp",
		"src/**/*.c",
		"src/**/*.h",
	]),
	defines = [
		"BOOST_ALL_NO_LIB=1"
	],
	deps = [
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_range//:range",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_graph_parallel//:graph_parallel",
		"@com_github_bazelboost_serialization//:serialization",
		"@com_github_bazelboost_iterator//:iterator",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_property_map//:property_map",
		"@com_github_bazelboost_smart_ptr//:smart_ptr",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_unordered//:unordered",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_tuple//:tuple",
		"@com_github_bazelboost_concept_check//:concept_check",
		"@com_github_bazelboost_throw_exception//:throw_exception",
		"@com_github_bazelboost_detail//:detail",
		"@com_github_bazelboost_bind//:bind",
		"@com_github_bazelboost_parameter//:parameter",
		"@com_github_bazelboost_optional//:optional",
		"@com_github_bazelboost_typeof//:typeof",
		"@com_github_bazelboost_math//:math",
		"@com_github_bazelboost_functional//:functional",
		"@com_github_bazelboost_integer//:integer",
		"@com_github_bazelboost_conversion//:conversion",
		"@com_github_bazelboost_tti//:tti",
		"@com_github_bazelboost_utility//:utility",
		"@com_github_bazelboost_function//:function",
		"@com_github_bazelboost_spirit//:spirit",
		"@com_github_bazelboost_random//:random",
		"@com_github_bazelboost_test//:test",
		"@com_github_bazelboost_any//:any",
		"@com_github_bazelboost_lexical_cast//:lexical_cast",
		"@com_github_bazelboost_property_tree//:property_tree",
		"@com_github_bazelboost_algorithm//:algorithm",
		"@com_github_bazelboost_foreach//:foreach",
		"@com_github_bazelboost_xpressive//:xpressive",
		"@com_github_bazelboost_array//:array",
		"@com_github_bazelboost_move//:move",
		"@com_github_bazelboost_disjoint_sets//:disjoint_sets",
		"@com_github_bazelboost_preprocessor//:preprocessor",
		"@com_github_bazelboost_multi_index//:multi_index",
		"@com_github_bazelboost_bimap//:bimap"
	],
)
