load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/graph/*.hpp",
    "include/boost/graph/planar_detail/*.hpp",
    "include/boost/graph/property_maps/*.hpp",
    "include/boost/pending/*.hpp",
]

cc_library(
    name = "graph_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
)

cc_library(
    name = "graph",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [":graph_internal"],
)
